# Plot-System-API

./: .gitignore  Cargo.toml  Dockerfile  PlotSystem-API.sln
.github/workflows/: docker-push.yml
PlotSystem-API/: ApiKeyMiddleware.cs  PlotSystem-API.csproj  PlotSystem-API.http  Program.cs
PlotSystem-API/Controllers/: CityProjectController.cs  PlotController.cs
PlotSystem-API/Extensions/: HttpContextExtensions.cs
PlotSystem-API/Models/: BuildTeam.cs  Builder.cs  BuilderHasPlot.cs  CityProject.cs  Country.cs  Plot.cs  PlotDifficulty.cs  PlotReview.cs  PlotSystemContext.cs  ReviewToggleCriterion.cs  Server.cs  Status.cs  SystemInfo.cs  Tutorial.cs
PlotSystem-API/Models/DTO/: CityProjectDto.cs  PlotDto.cs
PlotSystem-API/Properties/: launchSettings.json
PlotSystem-API/Services/: CityProjectRepositorySql.cs  ICityProjectRepository.cs  IPlotRepository.cs  PlotRepositorySql.cs
src/: main.rs
src/auth/: auth_preflag_request_guard.rs
src/db_get/: api_keys.rs  builder.rs  city_project.rs  country.rs  ftp_configuration.rs  mod.rs  plot.rs  server.rs
src/entities/: plotsystem_builders.rs  plotsystem_city_projects.rs  plotsystem_ftp_configurations.rs  plotsystem_plots.rs  plotsystem_reviews.rs  sea_orm_active_enums.rs
src/routes/: builders.rs  cities.rs  countries.rs  ftp.rs  get.rs  mod.rs  plots.rs  post.rs  put.rs
