[package]
name = "plotsystem_api"
version = "0.1.0"
authors = ["jo_kil"]
edition = "2021"
publish = false

[dependencies]
async-trait = { version = "0.1" }
rocket = { version = "0.5.0-rc.1", features = [
  "json",
] }
serde = "1.0.133"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies.sea-orm]
version = "^0.5.0"
features = ["macros", "runtime-tokio-native-tls"]
default-features = false

[dependencies.sea-orm-rocket]
git = "https://github.com/SeaQL/sea-orm"

[features]
default = ["sea-orm/sqlx-mysql"]
